# clauseminer

./: .gitignore  AGENT.md  JP6469758B2_formatted.txt  README.md  clause_miner.py  elements.json  pyproject.toml
clause_miner.egg-info/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
tests/: test_elements.py
tests/data/: elements_jp4743919.json
tests/fixtures/: elements_jp4743919.json
tests/fixtures/docs/: JP4743919B2.txt
